--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
       target: base
-    command: uvicorn main:app --reload --host 0.0.0.0
+    command: uvicorn plytz_runner.main:app --reload --host 0.0.0.0
+    ports:
+      - 8000:8000
     volumes:
       - .:/plytz
